--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -137,22 +137,25 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	text-align:center;
 	@include grid(12);
 	margin-top: 10px;
+	
 
 }
 
 .logo-box {
   margin-top:36px;
-  @include grid-container;
+  @include grid(6);
+  @include alpha;
+  height:72px;
   a:hover{
 	background-color: transparent;
   }
- 
 }
+
 .logedin-box{
-	position:relative;
-	left:852px;
-	top:-70px;
-	width:100px;
+  margin-top:36px;
+  @include grid(6);
+  height:72px;
+  text-align:right;
 }
 
 .squared-box{
@@ -267,14 +270,15 @@ $ninesixty-gutter-width: 20px; // default: 20px
 			width:230px;
 			font-weight: bold;
 		}
-		.header a
+		a
 		{
 			text-decoration:none;
 			font-weight: bold;
-
+			color:#444;
 		}
-		.header a:hover{
+		a:hover{
 			color:#fff;
+			background-color:#000;
 		}
 		h1{
 			margin-bottom:0px;
@@ -296,13 +300,23 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	text-align: right;
 }
 
-
-
-
-
 .grid-container{
-/*	@include grid(1);*/
 	@include grid-container;
+}
+
+.meeting-room{
+	@include grid(2);
+}
+
+a
+{
+	text-decoration:none;
+//	font-weight: bold;
+	color:#444;
+}
+a:hover{
+	color:#fff;
+	background-color:#000;
 }
 
 
