--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -14,7 +14,7 @@
 
   .squared-box
     .borders
-      = image_tag 'frontpage-house.jpg', :border => 'none', :class => 'image_fix'
+      = image_tag 'room.jpg', :border => 'none', :class => 'image_fix'
 
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
