--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -303,27 +303,35 @@ footer, header, hgroup, menu, nav, section {
   margin-top: 10px;
 }
 
-/* line 143, ../../../app/assets/stylesheets/grid.scss */
+/* line 144, ../../../app/assets/stylesheets/grid.scss */
 .logo-box {
   margin-top: 36px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 960px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 460px;
+  margin-left: 0;
+  height: 72px;
 }
-/* line 146, ../../../app/assets/stylesheets/grid.scss */
+/* line 149, ../../../app/assets/stylesheets/grid.scss */
 .logo-box a:hover {
   background-color: transparent;
 }
 
-/* line 151, ../../../app/assets/stylesheets/grid.scss */
+/* line 154, ../../../app/assets/stylesheets/grid.scss */
 .logedin-box {
-  position: relative;
-  left: 852px;
-  top: -70px;
-  width: 100px;
+  margin-top: 36px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 460px;
+  height: 72px;
+  text-align: right;
 }
 
-/* line 158, ../../../app/assets/stylesheets/grid.scss */
+/* line 161, ../../../app/assets/stylesheets/grid.scss */
 .squared-box {
   background-color: #fff;
   margin-top: 10px;
@@ -334,22 +342,22 @@ footer, header, hgroup, menu, nav, section {
   width: 460px;
   min-height: 376px;
 }
-/* line 163, ../../../app/assets/stylesheets/grid.scss */
+/* line 166, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 376px;
   display: block;
 }
-/* line 169, ../../../app/assets/stylesheets/grid.scss */
+/* line 172, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .content {
   margin: 20px;
 }
-/* line 172, ../../../app/assets/stylesheets/grid.scss */
+/* line 175, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .text-right {
   text-align: right;
 }
-/* line 175, ../../../app/assets/stylesheets/grid.scss */
+/* line 178, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box {
   background-image: url("/images/nav_left.png");
   background-repeat: no-repeat;
@@ -360,7 +368,7 @@ footer, header, hgroup, menu, nav, section {
   top: 20px;
   color: #fff;
 }
-/* line 184, ../../../app/assets/stylesheets/grid.scss */
+/* line 187, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box .menu-back {
   margin-left: 14px;
   background-color: #000;
@@ -368,14 +376,14 @@ footer, header, hgroup, menu, nav, section {
   padding-top: 8px;
   padding-left: 8px;
 }
-/* line 191, ../../../app/assets/stylesheets/grid.scss */
+/* line 194, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box h2 {
   color: #fff;
   font-size: 15px;
   margin-top: 1px;
   margin-left: 10px;
 }
-/* line 197, ../../../app/assets/stylesheets/grid.scss */
+/* line 200, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box a {
   text-decoration: none;
   color: #fff;
@@ -383,13 +391,13 @@ footer, header, hgroup, menu, nav, section {
   margin-top: 1px;
   margin-left: 19px;
 }
-/* line 204, ../../../app/assets/stylesheets/grid.scss */
+/* line 207, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 211, ../../../app/assets/stylesheets/grid.scss */
+/* line 214, ../../../app/assets/stylesheets/grid.scss */
 .news-box {
   display: inline;
   float: left;
@@ -402,13 +410,13 @@ footer, header, hgroup, menu, nav, section {
   width: 940px;
   display: block;
 }
-/* line 219, ../../../app/assets/stylesheets/grid.scss */
+/* line 222, ../../../app/assets/stylesheets/grid.scss */
 .news-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
 }
-/* line 225, ../../../app/assets/stylesheets/grid.scss */
+/* line 228, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side {
   height: 184px;
   display: inline;
@@ -419,7 +427,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 232, ../../../app/assets/stylesheets/grid.scss */
+/* line 235, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side .menu-box {
   background-image: url("/images/nav_left.png");
   background-repeat: no-repeat;
@@ -430,7 +438,7 @@ footer, header, hgroup, menu, nav, section {
   top: 20px;
   color: #fff;
 }
-/* line 241, ../../../app/assets/stylesheets/grid.scss */
+/* line 244, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side .menu-box .menu-back {
   margin-left: 14px;
   background-color: #000;
@@ -438,14 +446,14 @@ footer, header, hgroup, menu, nav, section {
   padding-top: 8px;
   padding-left: 8px;
 }
-/* line 248, ../../../app/assets/stylesheets/grid.scss */
+/* line 251, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side .menu-box h2 {
   color: #fff;
   font-size: 15px;
   margin-top: 1px;
   margin-left: 10px;
 }
-/* line 256, ../../../app/assets/stylesheets/grid.scss */
+/* line 259, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news {
   height: 184px;
   display: inline;
@@ -455,7 +463,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 261, ../../../app/assets/stylesheets/grid.scss */
+/* line 264, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -469,43 +477,65 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 271, ../../../app/assets/stylesheets/grid.scss */
-.news-box .news .header a {
+/* line 274, ../../../app/assets/stylesheets/grid.scss */
+.news-box .news a {
   text-decoration: none;
   font-weight: bold;
-}
-/* line 276, ../../../app/assets/stylesheets/grid.scss */
-.news-box .news .header a:hover {
-  color: #fff;
+  color: #444;
 }
 /* line 279, ../../../app/assets/stylesheets/grid.scss */
+.news-box .news a:hover {
+  color: #fff;
+  background-color: #000;
+}
+/* line 283, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 284, ../../../app/assets/stylesheets/grid.scss */
+/* line 288, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .gray {
   color: #999;
 }
-/* line 287, ../../../app/assets/stylesheets/grid.scss */
+/* line 291, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .text-right {
   text-align: right;
 }
-/* line 290, ../../../app/assets/stylesheets/grid.scss */
+/* line 294, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .content {
   width: 210px;
 }
 
-/* line 295, ../../../app/assets/stylesheets/grid.scss */
+/* line 299, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
 /* line 303, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
-  /*	@include grid(1);*/
   margin-left: auto;
   margin-right: auto;
   width: 960px;
+}
+
+/* line 307, ../../../app/assets/stylesheets/grid.scss */
+.meeting-room {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 140px;
+}
+
+/* line 312, ../../../app/assets/stylesheets/grid.scss */
+a {
+  text-decoration: none;
+  color: #444;
+}
+
+/* line 317, ../../../app/assets/stylesheets/grid.scss */
+a:hover {
+  color: #fff;
+  background-color: #000;
 }
