--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -332,33 +332,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 /* line 161, ../../../app/assets/stylesheets/grid.scss */
-.squared-box {
-  background-color: #fff;
-  margin-top: 10px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 460px;
-  min-height: 376px;
-}
-/* line 166, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .borders {
-  border-style: solid;
-  border-width: 1px;
-  height: 376px;
-  display: block;
-}
-/* line 172, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .content {
-  margin: 20px;
-}
-/* line 175, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .text-right {
-  text-align: right;
-}
-/* line 178, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .menu-box {
+.menu-box {
   background-image: url("/images/nav_left.png");
   background-repeat: no-repeat;
   width: 400px;
@@ -368,36 +342,82 @@ footer, header, hgroup, menu, nav, section {
   top: 20px;
   color: #fff;
 }
-/* line 187, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .menu-box .menu-back {
+/* line 170, ../../../app/assets/stylesheets/grid.scss */
+.menu-box .menu-back {
   margin-left: 14px;
   background-color: #000;
   height: 30px;
   padding-top: 8px;
   padding-left: 8px;
 }
-/* line 194, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .menu-box h2 {
+/* line 177, ../../../app/assets/stylesheets/grid.scss */
+.menu-box h2 {
   color: #fff;
   font-size: 15px;
   margin-top: 1px;
   margin-left: 10px;
 }
-/* line 200, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .menu-box a {
+/* line 183, ../../../app/assets/stylesheets/grid.scss */
+.menu-box a {
   text-decoration: none;
   color: #fff;
   font-size: 15px;
   margin-top: 1px;
   margin-left: 19px;
 }
-/* line 207, ../../../app/assets/stylesheets/grid.scss */
+/* line 190, ../../../app/assets/stylesheets/grid.scss */
+.menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+/* line 196, ../../../app/assets/stylesheets/grid.scss */
+.content {
+  margin: 20px;
+}
+
+/* line 200, ../../../app/assets/stylesheets/grid.scss */
+.squared-box {
+  background-color: #fff;
+  margin-top: 36px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 460px;
+  min-height: 376px;
+}
+/* line 205, ../../../app/assets/stylesheets/grid.scss */
+.squared-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  height: 376px;
+  display: block;
+}
+/* line 212, ../../../app/assets/stylesheets/grid.scss */
+.squared-box .content .content-top {
+  height: 280px;
+}
+/* line 214, ../../../app/assets/stylesheets/grid.scss */
+.squared-box .text-right {
+  text-align: right;
+}
+/* line 217, ../../../app/assets/stylesheets/grid.scss */
+.squared-box .menu-box {
+  width: 400px;
+  height: 51px;
+}
+/* line 220, ../../../app/assets/stylesheets/grid.scss */
+.squared-box .menu-box a {
+  color: #fff;
+}
+/* line 221, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 214, ../../../app/assets/stylesheets/grid.scss */
+/* line 225, ../../../app/assets/stylesheets/grid.scss */
 .news-box {
   display: inline;
   float: left;
@@ -410,13 +430,13 @@ footer, header, hgroup, menu, nav, section {
   width: 940px;
   display: block;
 }
-/* line 222, ../../../app/assets/stylesheets/grid.scss */
+/* line 233, ../../../app/assets/stylesheets/grid.scss */
 .news-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
 }
-/* line 228, ../../../app/assets/stylesheets/grid.scss */
+/* line 239, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side {
   height: 184px;
   display: inline;
@@ -427,33 +447,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 235, ../../../app/assets/stylesheets/grid.scss */
+/* line 246, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side .menu-box {
-  background-image: url("/images/nav_left.png");
-  background-repeat: no-repeat;
   width: 154px;
   height: 51px;
-  position: relative;
-  left: -14px;
-  top: 20px;
+}
+/* line 249, ../../../app/assets/stylesheets/grid.scss */
+.news-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 244, ../../../app/assets/stylesheets/grid.scss */
-.news-box .left-side .menu-box .menu-back {
-  margin-left: 14px;
-  background-color: #000;
-  height: 30px;
-  padding-top: 8px;
-  padding-left: 8px;
+/* line 250, ../../../app/assets/stylesheets/grid.scss */
+.news-box .left-side .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
 }
-/* line 251, ../../../app/assets/stylesheets/grid.scss */
-.news-box .left-side .menu-box h2 {
-  color: #fff;
-  font-size: 15px;
-  margin-top: 1px;
-  margin-left: 10px;
-}
-/* line 259, ../../../app/assets/stylesheets/grid.scss */
+/* line 253, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news {
   height: 184px;
   display: inline;
@@ -463,7 +471,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 264, ../../../app/assets/stylesheets/grid.scss */
+/* line 258, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -477,49 +485,46 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 274, ../../../app/assets/stylesheets/grid.scss */
+/* line 267, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news a {
   text-decoration: none;
   font-weight: bold;
   color: #444;
 }
-/* line 279, ../../../app/assets/stylesheets/grid.scss */
+/* line 271, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 283, ../../../app/assets/stylesheets/grid.scss */
+/* line 275, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 288, ../../../app/assets/stylesheets/grid.scss */
+/* line 280, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .gray {
   color: #999;
 }
-/* line 291, ../../../app/assets/stylesheets/grid.scss */
-.news-box .news .text-right {
-  text-align: right;
-}
-/* line 294, ../../../app/assets/stylesheets/grid.scss */
+/* line 283, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .content {
+  margin-top: 0px;
   width: 210px;
 }
 
-/* line 299, ../../../app/assets/stylesheets/grid.scss */
+/* line 289, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 303, ../../../app/assets/stylesheets/grid.scss */
+/* line 293, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
 
-/* line 307, ../../../app/assets/stylesheets/grid.scss */
+/* line 297, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -528,14 +533,67 @@ footer, header, hgroup, menu, nav, section {
   width: 140px;
 }
 
-/* line 312, ../../../app/assets/stylesheets/grid.scss */
+/* line 302, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 317, ../../../app/assets/stylesheets/grid.scss */
+/* line 307, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
+}
+
+/* line 315, ../../../app/assets/stylesheets/grid.scss */
+.google-box {
+  background-color: #fff;
+  margin-top: 36px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 460px;
+  min-height: 80px;
+}
+/* line 320, ../../../app/assets/stylesheets/grid.scss */
+.google-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  height: 80px;
+  display: block;
+}
+/* line 326, ../../../app/assets/stylesheets/grid.scss */
+.google-box .menu-box {
+  width: 400px;
+  height: 51px;
+}
+/* line 329, ../../../app/assets/stylesheets/grid.scss */
+.google-box .menu-box a {
+  color: #fff;
+}
+/* line 330, ../../../app/assets/stylesheets/grid.scss */
+.google-box .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+/* line 334, ../../../app/assets/stylesheets/grid.scss */
+.googlemap {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
+  background-color: #fff;
+  margin-top: 22px;
+  height: 600px;
+  width: 940px;
+  display: block;
+}
+/* line 342, ../../../app/assets/stylesheets/grid.scss */
+.googlemap .borders {
+  border-style: solid;
+  border-width: 1px;
+  height: 600px;
 }
