--- a/app/views/googlemap/index.html.slim
+++ b/app/views/googlemap/index.html.slim
@@ -1,11 +1,11 @@
 .grid-container
-  .google-box
+  .slim-box
     .borders
       .menu-box
         = render :partial => "shared/menu"
       .content
 
-  .google-box
+  .slim-box
     .borders
       .content
         h1
