--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -6,8 +6,13 @@
       .content
         b
           -@companies.each do |company|
-            = link_to company.title, company
-            br
+            .company-index
+              .image
+                = link_to image_tag(company.image.url(:mini), :border => 'none', :class => 'image_fix'), company
+              
+
+              = link_to company.title, company
+            
         - if can_edit?
           br
             = link_to 'Opret virksomhed', new_company_path
