--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -2,7 +2,7 @@
  * Learn more ~ http://960.gs/
  * *
  * Licensed under GPL and MIT. */
-/* line 17, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 115, ../../../../../.rvm/gems/ruby-1.9.2-rc2/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 115, ../../../../../.rvm/gems/ruby-1.9.2-rc2@gopublish/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -523,30 +523,46 @@ footer, header, hgroup, menu, nav, section {
   margin-right: auto;
   width: 960px;
 }
+/* line 295, ../../../app/assets/stylesheets/grid.scss */
+.grid-container .top-margin {
+  margin-top: 32px;
+}
 
-/* line 297, ../../../app/assets/stylesheets/grid.scss */
+/* line 300, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
   margin-left: 10px;
   margin-right: 10px;
   width: 140px;
+  margin-left: 0;
 }
 
-/* line 302, ../../../app/assets/stylesheets/grid.scss */
+/* line 305, ../../../app/assets/stylesheets/grid.scss */
+.meeting-room-right {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 300px;
+  margin-right: 0;
+  padding-right: 480px;
+}
+
+/* line 312, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 307, ../../../app/assets/stylesheets/grid.scss */
+/* line 317, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 315, ../../../app/assets/stylesheets/grid.scss */
-.google-box {
+/* line 322, ../../../app/assets/stylesheets/grid.scss */
+.slim-box {
   background-color: #fff;
   margin-top: 36px;
   display: inline;
@@ -556,29 +572,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 320, ../../../app/assets/stylesheets/grid.scss */
-.google-box .borders {
+/* line 327, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 326, ../../../app/assets/stylesheets/grid.scss */
-.google-box .menu-box {
+/* line 333, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 329, ../../../app/assets/stylesheets/grid.scss */
-.google-box .menu-box a {
+/* line 336, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .menu-box a {
   color: #fff;
 }
-/* line 330, ../../../app/assets/stylesheets/grid.scss */
-.google-box .menu-box a:hover {
+/* line 337, ../../../app/assets/stylesheets/grid.scss */
+.slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 334, ../../../app/assets/stylesheets/grid.scss */
+/* line 341, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -591,9 +607,37 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 342, ../../../app/assets/stylesheets/grid.scss */
+/* line 349, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
+}
+
+/* line 356, ../../../app/assets/stylesheets/grid.scss */
+.company-index {
+  width: 185px;
+  height: 60px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+/* line 365, ../../../app/assets/stylesheets/grid.scss */
+.company-index .image {
+  width: 70px;
+  height: 57px;
+  display: inline;
+  float: left;
+  margin: 1px 10px 1px 1px;
+}
+
+/* line 374, ../../../app/assets/stylesheets/grid.scss */
+.fullpage {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
 }
