--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -4,18 +4,17 @@
       .menu-box
         = render :partial => "shared/menu"
       .content
-        b
+        .content-company
+          
           -@companies.each do |company|
             .company-index
               .image
                 = link_to image_tag(company.image.url(:mini), :border => 'none', :class => 'image_fix'), company
-              
-
               = link_to company.title, company
-            
+          = will_paginate @companies 
         - if can_edit?
-          br
-            = link_to 'Opret virksomhed', new_company_path
+          = link_to 'Opret virksomhed', new_company_path
+        
 
   .squared-box
     .borders
