--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -375,8 +375,22 @@ footer, header, hgroup, menu, nav, section {
 .content {
   margin: 20px;
 }
-
+/* line 198, ../../../app/assets/stylesheets/grid.scss */
+.content .content-company {
+  height: 280px;
+}
 /* line 200, ../../../app/assets/stylesheets/grid.scss */
+.content .content-company .pagination {
+  text-align: center;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 300px;
+  margin-top: 10px;
+}
+
+/* line 211, ../../../app/assets/stylesheets/grid.scss */
 .squared-box {
   background-color: #fff;
   margin-top: 36px;
@@ -385,39 +399,40 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 10px;
   margin-right: 10px;
   width: 460px;
-  min-height: 376px;
+  height: 376px;
+  display: block;
 }
-/* line 205, ../../../app/assets/stylesheets/grid.scss */
+/* line 217, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 376px;
   display: block;
 }
-/* line 212, ../../../app/assets/stylesheets/grid.scss */
+/* line 224, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .content .content-top {
   height: 280px;
 }
-/* line 214, ../../../app/assets/stylesheets/grid.scss */
+/* line 226, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .text-right {
   text-align: right;
 }
-/* line 217, ../../../app/assets/stylesheets/grid.scss */
+/* line 229, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 220, ../../../app/assets/stylesheets/grid.scss */
+/* line 232, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box a {
   color: #fff;
 }
-/* line 221, ../../../app/assets/stylesheets/grid.scss */
+/* line 233, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 225, ../../../app/assets/stylesheets/grid.scss */
+/* line 237, ../../../app/assets/stylesheets/grid.scss */
 .news-box {
   display: inline;
   float: left;
@@ -430,13 +445,13 @@ footer, header, hgroup, menu, nav, section {
   width: 940px;
   display: block;
 }
-/* line 233, ../../../app/assets/stylesheets/grid.scss */
+/* line 245, ../../../app/assets/stylesheets/grid.scss */
 .news-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
 }
-/* line 239, ../../../app/assets/stylesheets/grid.scss */
+/* line 251, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side {
   height: 184px;
   display: inline;
@@ -447,21 +462,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 246, ../../../app/assets/stylesheets/grid.scss */
+/* line 258, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 249, ../../../app/assets/stylesheets/grid.scss */
+/* line 261, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 250, ../../../app/assets/stylesheets/grid.scss */
+/* line 262, ../../../app/assets/stylesheets/grid.scss */
 .news-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 253, ../../../app/assets/stylesheets/grid.scss */
+/* line 265, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news {
   height: 184px;
   display: inline;
@@ -471,7 +486,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 258, ../../../app/assets/stylesheets/grid.scss */
+/* line 270, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -485,50 +500,50 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 267, ../../../app/assets/stylesheets/grid.scss */
+/* line 279, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news a {
   text-decoration: none;
   font-weight: bold;
   color: #444;
 }
-/* line 271, ../../../app/assets/stylesheets/grid.scss */
+/* line 283, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 275, ../../../app/assets/stylesheets/grid.scss */
+/* line 287, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 280, ../../../app/assets/stylesheets/grid.scss */
+/* line 292, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .gray {
   color: #999;
 }
-/* line 283, ../../../app/assets/stylesheets/grid.scss */
+/* line 295, ../../../app/assets/stylesheets/grid.scss */
 .news-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 289, ../../../app/assets/stylesheets/grid.scss */
+/* line 301, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 293, ../../../app/assets/stylesheets/grid.scss */
+/* line 305, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 295, ../../../app/assets/stylesheets/grid.scss */
+/* line 307, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 300, ../../../app/assets/stylesheets/grid.scss */
+/* line 312, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -538,7 +553,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 305, ../../../app/assets/stylesheets/grid.scss */
+/* line 317, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -549,19 +564,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 312, ../../../app/assets/stylesheets/grid.scss */
+/* line 324, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 317, ../../../app/assets/stylesheets/grid.scss */
+/* line 329, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 322, ../../../app/assets/stylesheets/grid.scss */
+/* line 334, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -572,29 +587,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 327, ../../../app/assets/stylesheets/grid.scss */
+/* line 339, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 333, ../../../app/assets/stylesheets/grid.scss */
+/* line 345, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 336, ../../../app/assets/stylesheets/grid.scss */
+/* line 348, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 337, ../../../app/assets/stylesheets/grid.scss */
+/* line 349, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 341, ../../../app/assets/stylesheets/grid.scss */
+/* line 353, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -607,14 +622,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 349, ../../../app/assets/stylesheets/grid.scss */
+/* line 361, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 356, ../../../app/assets/stylesheets/grid.scss */
+/* line 368, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 185px;
   height: 60px;
@@ -622,9 +637,9 @@ a:hover {
   float: left;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: 20px;
+  margin-top: 8px;
 }
-/* line 365, ../../../app/assets/stylesheets/grid.scss */
+/* line 377, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   width: 70px;
   height: 57px;
@@ -633,11 +648,33 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 374, ../../../app/assets/stylesheets/grid.scss */
+/* line 386, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
   margin-left: 10px;
   margin-right: 10px;
   width: 940px;
+}
+
+/* line 390, ../../../app/assets/stylesheets/grid.scss */
+.tlf-box {
+  float: right;
+  text-align: center;
+  background-color: #fff;
+  position: relative;
+  top: -100px;
+  border-style: solid;
+  border-right-style: none;
+  border-width: 1px;
+  height: 40px;
+}
+/* line 400, ../../../app/assets/stylesheets/grid.scss */
+.tlf-box .tlf-content {
+  position: relative;
+  top: 10px;
+  margin: 10px;
+  font-size: 14px;
+  display: inline;
+  height: 40px;
 }
