border on company thumbnails on index page

--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -375,6 +375,8 @@ a:hover{
 	margin-top: 8px;
 	
 	.image{
+		border-style:solid;
+		border-width:1px;
 		width:70px;
 		height: 57px;
 		display: inline;
