--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -641,6 +641,8 @@ a:hover {
 }
 /* line 377, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
+  border-style: solid;
+  border-width: 1px;
   width: 70px;
   height: 57px;
   display: inline;
@@ -648,7 +650,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 386, ../../../app/assets/stylesheets/grid.scss */
+/* line 388, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -657,7 +659,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 390, ../../../app/assets/stylesheets/grid.scss */
+/* line 392, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box {
   float: right;
   text-align: center;
@@ -669,7 +671,7 @@ a:hover {
   border-width: 1px;
   height: 40px;
 }
-/* line 400, ../../../app/assets/stylesheets/grid.scss */
+/* line 402, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box .tlf-content {
   position: relative;
   top: 10px;
