transparency on phone numbers for companies

--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -399,6 +399,9 @@ a:hover{
 	border-right-style:none;
 	border-width:1px;
 	height:40px;
+	filter:alpha(opacity=75); /* IE's opacity*/
+	opacity: 0.75;
+	
 	.tlf-content{
 		position:relative;
 		top:10px;
