--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -670,8 +670,11 @@ a:hover {
   border-right-style: none;
   border-width: 1px;
   height: 40px;
+  filter: alpha(opacity=75);
+  /* IE's opacity*/
+  opacity: 0.75;
 }
-/* line 402, ../../../app/assets/stylesheets/grid.scss */
+/* line 409, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box .tlf-content {
   position: relative;
   top: 10px;
