--- a/app/views/meetingrooms/show.html.slim
+++ b/app/views/meetingrooms/show.html.slim
@@ -11,19 +11,28 @@
 	    - if can?(:edit, @meetingroom)
 	      .text-right
 	        = link_to t('admin.edit'), edit_meetingroom_path(@meetingroom)
+	        |  | 
+	        = link_to t('admin.delete'), @meetingroom, :confirm => t('admin.are_you_sure'), :method => :delete
+	       
 
   .squared-box
     .borders
       div style="width:458px; height:376px; overflow:hidden"
         = image_tag @meetingroom.image.url(:preview), :border => 'none', :class => 'image_fix'
 
-  .news-box
+  .bottom-box
     .borders
       .left-side
         .menu-box
           .menu-back
             h2
-              | NEWS
+              | Booking
+        .booking-box
+          = link_to 'book mødelokale', new_meetingroom_booking_path(@meetingroom)
+          br
+          = link_to 'bookings', meetingroom_bookings_path(@meetingroom)
+      .right-side
+        | da
       
 
 
