--- a/app/views/newsposts/show.html.slim
+++ b/app/views/newsposts/show.html.slim
@@ -13,8 +13,9 @@
     
 	    
   .squared-box
-    .borders
-//      div style="width:458px; height:376px; overflow:hidden"
- //       = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
 
+	  .borders
+	    div style="width:458px; height:376px; overflow:hidden"
+	      = image_tag @newspost.image.url(:preview), :border => 'none', :class => 'image_fix'
+	    
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
