--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -29,5 +29,7 @@
 </table>
 
 <br />
-
-<%= link_to 'New Booking', new_booking_path %>
+<% if can_edit? %> 
+    <br />
+    <%= link_to 'New Booking', new_booking_path %>
+<%end%>
