--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,5 +25,7 @@ html
               = link_to 'admin', admin_path
               |  |  
               = link_to 'mødelokaler' , meetingrooms_path
+              |  |  
+              = link_to 'booking kalender', bookingcalendar_index_path
         = yield
         .clear
