--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -59,7 +59,7 @@
 
 
     div class="actions top_margin_12"
-      = f.submit 'Gem', disable_with: 'Saving...'
+      = f.submit 'Gem', disable_with: 'Gemmer...'
       = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
 
 
