--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New booking</h1>
+<h1>Opret booking</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', bookings_path %>
+<%= link_to 'tilbage', meetingroom_bookings_path( @meetingroom) %>
