Added display of calendar for day when booking a meeting; added validations for bookings; use labels in form; some cleanup

--- a/app/views/bookings/index.html.slim
+++ b/app/views/bookings/index.html.slim
@@ -29,7 +29,7 @@ br
   hr
 
 
-- if can_edit? 
+- if can_edit? && @meetingroom
   br 
   = link_to 'New Booking', new_meetingroom_booking_path(@meetingroom) 
 
