--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -1,6 +1,6 @@
-= form_for(@booking, :html => { :multipart => true }) do |f|
+= form_for([@meetingroom, @booking], :html => { :multipart => true }) do |f|
   -if @booking.errors.any?
-	#error_explanation
+    #error_explanation
       h2
         = pluralize(@booking.errors.count, "error")
         | prohibited this booking from being saved:
@@ -10,47 +10,42 @@
           li
             = msg 
 
-
   .field
-    | Mødelokale
+    = f.label :meetingroom_id, 'Mødelokale'
     br
-    = f.select :meetingroom_id, @select_meetingroom
+    = f.select :meetingroom_id, meetingrooms_select
+
   br
   .field
     -if(current_user.role == 'member' ) 
         | Bookes af: 
-        = @user.name
-        = f.hidden_field :bookers_name, :value => @user.name 
+        = current_user.name
+        = f.hidden_field :bookers_name, :value => current_user.name
     -else
-      | Bookes til: 
-      = f.select :bookers_name, @select_user
-
-
-	
-	
-  br
-  .field
-	= f.date_select :created_at
+      = f.label :bookers_name, 'Bookes til:'
+      = f.select :bookers_name, user_select
 
   br
   .field
+    = f.date_select :created_at
 
-    | Fra kl.
+  br
+  .field
+    = f.label :starttime, 'Fra kl.'
     = f.time_select :starttime
-    | - Til kl. 
+    = f.label :endtime, ' - Til kl.'
     = f.time_select :endtime
 
-  
   br
   
   .field
-    | Deltagerer: 
+    = f.label :attendees, 'Deltagerer:'
     = f.text_field :attendees
   
   br
   .field
     = f.check_box :coffee_and_bread
-    | Brød og kaffe
+    = f.label :coffee_and_bread, 'Brød og kaffe'
   br
 
   
@@ -59,6 +54,3 @@
   .actions
     = f.submit 'Gem'
     = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
-
-
-
